# kopp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
kopp/: __init__.py  __main__.py  cli.py  main.py
